--- a/gb/21/10/18/n13312244.md
+++ b/gb/21/10/18/n13312244.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ixbbwc3288/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ixbbwc3288/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ixbbwc3288/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>蔡诗芸戴千万珠宝为新辑庆功 王阳明感性告白</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13312351-2110180423342122-600x400.jpg" />
 <h6>Dizzy Dizzo 蔡诗芸于2021年10月18日在台北举行专辑《SKY》庆功记者会。（黄宗茂／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2021年10月18日讯】（大纪元记者郑宜芬台湾台北报导）Dizzy Dizzo<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E8%94%A1%E8%AF%97%E8%8A%B8.md#1">蔡诗芸</a>18日为新专辑《SKY》庆功，穿着一袭时尚华服，配戴价值上千万的珠宝大气亮相。丈夫<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E7%8E%8B%E9%98%B3%E6%98%8E.md#1">王阳明</a>（Sunny）提前录影告白，感谢她为家庭、女儿的付出，一句“我爱你”更让蔡诗芸感动落泪。</p>
-<p><ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E8%94%A1%E8%AF%97%E8%8A%B8.md#1">蔡诗芸</a>睽违3年，于今年5月20日推出创作专辑《SKY》，分享这几年从人妻晋升为母亲的各种感动时刻。虽因疫情打乱发片行程，专辑发行5个月后才举办记者会，但蔡诗芸如今迎来双喜临门，一是入围金音奖最佳嘻哈专辑，二是专辑中合作歌曲点阅双双破百万。她更于现场首度带领舞者唱跳专辑主打歌《WIFEY》。</p>
+	<p>【大纪元2021年10月18日讯】（大纪元记者郑宜芬台湾台北报导）Dizzy Dizzo<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%94%A1%E8%AF%97%E8%8A%B8.md#1">蔡诗芸</a>18日为新专辑《SKY》庆功，穿着一袭时尚华服，配戴价值上千万的珠宝大气亮相。丈夫<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E9%98%B3%E6%98%8E.md#1">王阳明</a>（Sunny）提前录影告白，感谢她为家庭、女儿的付出，一句“我爱你”更让蔡诗芸感动落泪。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%94%A1%E8%AF%97%E8%8A%B8.md#1">蔡诗芸</a>睽违3年，于今年5月20日推出创作专辑《SKY》，分享这几年从人妻晋升为母亲的各种感动时刻。虽因疫情打乱发片行程，专辑发行5个月后才举办记者会，但蔡诗芸如今迎来双喜临门，一是入围金音奖最佳嘻哈专辑，二是专辑中合作歌曲点阅双双破百万。她更于现场首度带领舞者唱跳专辑主打歌《WIFEY》。</p>
 <figure id="attachment_13312347" aria-describedby="caption-attachment-13312347" style="width: 430px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13312347-2110180424202122.jpg"><img class="size-large wp-image-13312347" title="Dizzy Dizzo 蔡诗芸专辑‘SKY’庆功记者会" src="https://i.epochtimes.com/assets/uploads/2021/10/id13312347-2110180424202122.jpg" alt="Dizzy Dizzo 蔡诗芸专辑‘SKY’庆功记者会" width="430" b="730" /></a><figcaption id="caption-attachment-13312347" class="wp-caption-text">Dizzy Dizzo 蔡诗芸于2021年10月18日在台北举行专辑《SKY》庆功记者会。（黄宗茂／大纪元）</figcaption></figure>
-<p><ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E7%8E%8B%E9%98%B3%E6%98%8E.md#1">王阳明</a>不仅送花，也事先录好影片，夸蔡诗芸有才华、不要放弃梦想，并感谢她为家庭、女儿的付出，相信彼此可以一起度过所有不好的事情，尤其当王阳明说到“I love you”时，蔡诗芸更是感动落泪。蔡诗芸说，一路以来做音乐，自己的头号粉丝就是Sunny，“总是给我灵感和建议，他最喜欢专辑中《完美不完美》这首歌。”</p>
-<p>好友<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E9%AB%98%E5%B0%94%E5%AE%A3.md#1">高尔宣</a>OSN献上冲浪板力挺，预祝蔡诗芸拿奖，“ 因为我们这次合作的《Tides》跟海洋有关，Dizzy又是一位热爱海洋的辣妈，希望Dizzy能一直乘风破浪保持在浪头上，无论在音乐、时尚和人生态度，都能完美驾驭、引领向前。”</p>
-<figure id="attachment_13312354" aria-describedby="caption-attachment-13312354" style="width: 430px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13312354-2110180423552122.jpg"><img class="size-large wp-image-13312354" title="Dizzy Dizzo 蔡诗芸专辑‘SKY’庆功记者会" src="https://i.epochtimes.com/assets/uploads/2021/10/id13312354-2110180423552122.jpg" alt="Dizzy Dizzo 蔡诗芸专辑‘SKY’庆功记者会" width="430" b="603" /></a><figcaption id="caption-attachment-13312354" class="wp-caption-text">Dizzy Dizzo 蔡诗芸于2021年10月18日在台北举行专辑《SKY》庆功记者会。<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E9%AB%98%E5%B0%94%E5%AE%A3.md#1">高尔宣</a>站台。（黄宗茂／大纪元）</figcaption></figure>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E9%98%B3%E6%98%8E.md#1">王阳明</a>不仅送花，也事先录好影片，夸蔡诗芸有才华、不要放弃梦想，并感谢她为家庭、女儿的付出，相信彼此可以一起度过所有不好的事情，尤其当王阳明说到“I love you”时，蔡诗芸更是感动落泪。蔡诗芸说，一路以来做音乐，自己的头号粉丝就是Sunny，“总是给我灵感和建议，他最喜欢专辑中《完美不完美》这首歌。”</p>
+<p>好友<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%AB%98%E5%B0%94%E5%AE%A3.md#1">高尔宣</a>OSN献上冲浪板力挺，预祝蔡诗芸拿奖，“ 因为我们这次合作的《Tides》跟海洋有关，Dizzy又是一位热爱海洋的辣妈，希望Dizzy能一直乘风破浪保持在浪头上，无论在音乐、时尚和人生态度，都能完美驾驭、引领向前。”</p>
+<figure id="attachment_13312354" aria-describedby="caption-attachment-13312354" style="width: 430px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13312354-2110180423552122.jpg"><img class="size-large wp-image-13312354" title="Dizzy Dizzo 蔡诗芸专辑‘SKY’庆功记者会" src="https://i.epochtimes.com/assets/uploads/2021/10/id13312354-2110180423552122.jpg" alt="Dizzy Dizzo 蔡诗芸专辑‘SKY’庆功记者会" width="430" b="603" /></a><figcaption id="caption-attachment-13312354" class="wp-caption-text">Dizzy Dizzo 蔡诗芸于2021年10月18日在台北举行专辑《SKY》庆功记者会。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%AB%98%E5%B0%94%E5%AE%A3.md#1">高尔宣</a>站台。（黄宗茂／大纪元）</figcaption></figure>
 <p>蔡诗芸这次分别和高尔宣、瘦子E.SO等帅气男歌手合唱歌曲《Tides》、《Trash Talk》，点击已经突破百万。被问及丈夫王阳明是否会特别盯场？她笑说：“不用盯场，都是他兄弟朋友，所有合作都是有讨论，询问合作的可能性，他们答应很荣幸有机会合作”。</p>
 <p>升格当母亲的蔡诗芸聊起2岁的女儿Katiya，自豪表示女儿很独立，除了晚上睡觉，已经不用再使用尿布。“她满喜欢自己一个人，她很知道自己要什么，会知道什么时候要睡觉，饿了就会去看冰箱。”例如有次出门，蔡诗芸原本担心女儿年纪太小不想戴口罩，但女儿主动指着口罩要戴，让她觉得很放心。</p>
 <p>另外，蔡诗芸上个月被爆出跑宣传时，让外佣爬进后车厢入座，疑似违法，她回应说明：“大大的误会，我们那台车七人座位置，我们自己平常也会从后门上车，因为比较方便。”对于引起网友批评，她说：“不会觉得委屈，还原事实，我知道我是什么样的女生，没什么惊讶，一切就是个误会。”</p>
@@ -21,41 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/20/2/25/n11893927.md#1">蔡诗芸产后献声 为女儿满月创作新歌</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/20/8/28/n12364534.md#1">王阳明自认女儿控 蔡诗芸狂买女儿用品</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/20/11/4/n12524872.md#1">王阳明庆生许愿卖关子“第二胎是肯定想的”</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/20/12/24/n12642586.md#1">王阳明为上镜勤健身 女儿刚周岁不急生二胎</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/2/25/n11893927.md#1">蔡诗芸产后献声 为女儿满月创作新歌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/28/n12364534.md#1">王阳明自认女儿控 蔡诗芸狂买女儿用品</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/4/n12524872.md#1">王阳明庆生许愿卖关子“第二胎是肯定想的”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/24/n12642586.md#1">王阳明为上镜勤健身 女儿刚周岁不急生二胎</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234388.md#1" target="_blank">【征文】文宇：科举千年兴衰录（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490487.md#1" target="_blank">“感受到强大能量”塞浦路斯女子走入修炼</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/17/n10569800.md#1" target="_blank">刘晓：中共效仿纳粹大规模焚书 结局相同</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">法轮功受难中重建中华价值观</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/8/n13291558.md#1">【未解之谜】传奇女祭司 三千年后重回神庙</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/13/n13302112.md#1">【百年真相】“歌仙”之死 陈歌辛农场受难</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/11/n13297368.md#1">【百年真相】文革的殉难者 老舍沉湖之谜</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/4/n13281535.md#1">无神论者向神的宣战</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/14/n13305026.md#1">【未解之谜】透视千里之外 日本“千里眼之女”</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308941.md#1">【财商天下】大陆多地救市 购房补贴最高100万</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13309013.md#1">【时事军事】卡梅尔在路上 梅卡瓦MK5还有多远</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13309418.md#1">【横河观点】大外宣揭“610 ”？透露何信息</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13307664.md#1">【新闻看点】党报诡异捧习父子 反习势力蠢动？</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13309275.md#1">普京发表北京无需武统台湾言论 引多方解读</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308259.md#1">50名中国留美学生身份被终止 面临驱逐出境</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13307478.md#1">50岁黎姿晒健身照 分享保持好身材秘笈</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13309580.md#1">对唱《玻璃心》应验 黄明志陈芳语微博被消失</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308101.md#1">《被遗忘的战役》影评：三方视角 营造战火下的人性光辉</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310847.md#1">黄渤在网上做智商测试题 被骗钱后才恍然大悟</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310371.md#1">李玖哲告假节目陪爱妻 江宏杰代班变胖称职灾</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308939.md#1">维生素B群前3名食物大公开 有些你常常吃</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/13/n13302651.md#1">哈佛80年研究 揭开长寿一大秘诀</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/14/n13304767.md#1">疲劳、睡不饱有5大原因！中医消疲劳有方法</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308389.md#1">【健康1+1】辉瑞BNT疫苗真有胚胎细胞吗？</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310072.md#1">三文鱼烹煮时溢出白色物质 用这办法可去掉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ixbbwc3288/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ixbbwc3288/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13312244.htm">蔡诗芸戴千万珠宝为新辑庆功 王阳明感性告白</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13312244.htm">蔡诗芸戴千万珠宝为新辑庆功 王阳明感性告白</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/18/n13312244.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ixbbwc3288/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ixbbwc3288/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/18/n13312244.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
